# myra

./: .gitignore  .prettierignore  .prettierrc.json  README.md  components.json  eslint.config.js  index.html  next.config.mjs  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: format.bat  format.ps1  install_windivert.bat  nc.md  netcat_listener.ps1  run_ncat_test.ps1  send_udp_nums.py  udp_receiver.ps1  udp_sender.ps1  windivert.ps1
src/: App.tsx  layout.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  clippy.toml  myra.exe.manifest  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/docs/: ADDING_MODULES.md
src-tauri/examples/: test_windivert.rs
src-tauri/src/: error.rs  lib.rs  main.rs  prelude.rs  utils.rs
src-tauri/src/commands/: classic.rs  classic_state.rs  config.rs  filter_history.rs  manipulation.rs  mod.rs  settings.rs  start.rs  state.rs  status.rs  stop.rs  system.rs  tc_bandwidth.rs  types.rs  update.rs
src-tauri/src/network/: mod.rs
src-tauri/src/network/classic/: bandwidth.rs  drop.rs  latency.rs  mod.rs  processor.rs  reorder.rs  state.rs  tamper.rs  throttle.rs
src-tauri/src/network/core/: flow_tracker.rs  handle.rs  handle_manager.rs  mod.rs  packet.rs  packet_data.rs
src-tauri/src/network/modules/: bandwidth.rs  burst.rs  corruption.rs  delay.rs  drop.rs  duplicate.rs  lag.rs  mod.rs  registry.rs  reorder.rs  tamper.rs  throttle.rs  traits.rs
src-tauri/src/network/modules/stats/: bandwidth_stats.rs  burst_stats.rs  corruption_stats.rs  delay_stats.rs  drop_stats.rs  duplicate_stats.rs  lag_stats.rs  mod.rs  reorder_stats.rs  tamper_stats.rs  throttle_stats.rs
src-tauri/src/network/modules/stats/util/: ewma.rs
src-tauri/src/network/processing/: mod.rs  module_state.rs  packet_processing.rs  packet_processing_state.rs  packet_receiving.rs  processor.rs  receiver.rs
src-tauri/src/network/qos_policy/: mod.rs  policy_limiter.rs
src-tauri/src/network/traffic_control/: mod.rs  tc_limiter.rs
src-tauri/src/network/types/: delayed_packet.rs  probability.rs
src-tauri/src/network/utils/: filter.rs
src-tauri/src/network/wfp_throttle/: mod.rs  throttle.rs
src-tauri/src/settings/: bandwidth.rs  builder.rs  burst.rs  corruption.rs  delay.rs  drop.rs  duplicate.rs  lag.rs  manipulation.rs  mod.rs  packet_manipulation.rs  reorder.rs  tamper.rs  tc_bandwidth.rs  throttle.rs
src-tauri/src/settings/classic/: bandwidth.rs  drop.rs  latency.rs  mod.rs  reorder.rs  tamper.rs  throttle.rs
src/__tests__/: setup.ts
src/components/: classic-module-panel.tsx  classic-module-row.tsx  error-boundary.tsx  filter-control.tsx  filter-target-selector.tsx  header.tsx  hotkey-badge.tsx  mode-selector.tsx  module-panel.tsx  module-row.tsx  network-controls.tsx  status-bar.tsx  tap-control.tsx  tc-bandwidth-control.tsx  theme-selector.tsx  toggle-button.tsx
src/components/presets/: preset-manager.tsx  quick-presets.tsx
src/components/providers/: toast-provider.tsx
src/components/ui/: alert-dialog.tsx  auto-input.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  infinity-input.tsx  input.tsx  label.tsx  myra-checkbox.tsx  network-card.tsx  process-icon.tsx  process-selector.tsx  radio-group.tsx  select.tsx  separator.tsx  slider.tsx  switch.tsx  tabs.tsx  textarea.tsx  theme-toggle.tsx  tooltip.tsx
src/hooks/: use-active-timer.ts  use-classic-tap.ts  use-debounce.ts  use-hotkeys.ts  use-tap.ts
src/lib/: api-hooks.ts  tauri-api.ts  theme.ts
src/lib/__tests__/: utils.test.ts
src/lib/services/: manipulation.ts  tc-bandwidth.ts
src/lib/services/__tests__/: manipulation.test.ts
src/lib/stores/: classic-store.ts  hotkey-store.ts  mode-store.ts  tap-store.ts
src/lib/stores/__tests__/: hotkey-store.test.ts
src/lib/stores/network/: constants.ts  core-actions.ts  index.ts  (+3 more)
src/providers/: theme-provider.tsx
src/styles/: blue.css  dark.css  globals.css  green.css  light.css  red.css
src/types/: classic.ts  index.ts  theme.ts
(+1 files in other folders)
