[package]
name = "myra"
version = "0.1.0"
authors = ["boiln"]
description = "A tool for simulating poor network conditions"
repository = "https://github.com/boiln/myra"
edition = "2021"
rust-version = "1.70.0"  # Specify minimum Rust version
license = "MIT"  # Add appropriate license
keywords = ["network", "packet", "manipulation", "simulation", "latency"]
categories = ["development-tools::testing", "simulation", "network-programming"]
readme = "../README.md"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = { version = "2" }
tauri-plugin-global-shortcut = "2"

# WinDivert for packet capture and manipulation
windivert = { version = "0.6", features = ["vendored"] }
windivert-sys = "0.10.0"

# Windows API bindings
winapi = { version = "0.3.9", features = ["securitybaseapi", "winnt", "shellapi", "winuser", "wingdi", "windef"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_QoS",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_System_Com",
    "Win32_Media",
] }

# Error handling
thiserror = "2.0.17"

# Randomization and probability 
rand = "0.9.0-alpha.2"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.148"
toml = "0.9.8"
base64 = "0.22"

# File system utilities
dirs = "6.0.0"

# Command-line argument parsing
clap = { version = "4.5.11", features = ["derive"] }

# System information (process listing)
sysinfo = "0.37.2"

# HTTP client for API requests (async)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# mDNS/Bonjour device discovery
mdns-sd = "0.17.1"

# Logging
log = "0.4.22"

# Time utilities
chrono = "0.4.34"

[profile.release]
# Optimize for size and performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true  # Strip debug symbols

[profile.dev.package."*"]
# Optimize dependencies even in debug mode
opt-level = 1
